--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,11 @@
 </head>
 <body>
     <div class="like-container">
-        <button id="like-button" class="{{#if liked}}liked{{/if}}">{{#if liked}}Unlike{{else}}Like{{/if}}</button>
+        <h2>LIKING THE READ? LET US KNOW!</h2>
+        <section>
+        <button id="like-button" class="{{#if liked}}liked{{/if}}">{{#if liked}}{{else}}{{/if}}</button>
         <span id="like-count">{{likeCount}}</span>
+        </section>
     </div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
