--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,7 @@ body {
     transform-origin: top left;
     transform: scale(1); /* Standaardschaal van 1 */
     transition: transform 0.3s; /* Voeg een overgang toe voor een vloeiende schaalverandering */
+    transform: scale(0.8);
 }
 
 h2 {
