--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,7 @@ body {
 
 }
 
+
 .like-container {
     height: 2em;
     max-width: 40em; /* Maximale breedte in em */
@@ -32,7 +33,7 @@ body {
     background-color: #7b00e6;
     border-radius: 20px;
     transform-origin: top left;
-    transform: scale(0.75) !important; /* Standaardschaal van 1 */
+    transform: scale(0.75);
     transition: transform 0.3s; /* Voeg een overgang toe voor een vloeiende schaalverandering */
 }
 
