--- a/views/immunology.handlebars
+++ b/views/immunology.handlebars
@@ -3,8 +3,9 @@
 <head>
     <title>Like Feature</title>
     <link rel="stylesheet" href="/css/styles.css" />
+     <link rel="stylesheet" href="https://use.typekit.net/xpe1dpz.css">
 </head>
-<body>
+<body class = "immunology">
     <div class="like-container">
         <h2>LIKING THE READ? LET US KNOW!</h2>
         <section>
